blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/Package__c.object-meta.xml
<CustomObject>
    <description>One thing the organiser sells for an event, such as a sponsorship tier, a block of stand space or an add-on. Holds price and quantity so availability and sell-through can be seen.</description>
    <label>Package</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>