blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lists the inventory for each edition and its sell-through.</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Packages</relationshipLabel>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>