blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Exclusive__c.field-meta.xml
<CustomField>
    <fullName>Exclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one company per category can buy this. Checked before a proposal is sent.</description>
    <label>Category exclusive</label>
    <type>Checkbox</type>
</CustomField>