blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Package_type__c.field-meta.xml
<CustomField>
    <fullName>Package_type__c</fullName>
    <description>What kind of inventory this is.</description>
    <label>Package type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor tier</fullName>
            </value>
            <value>
                <fullName>Stand space</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>