blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price excluding VAT.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>