blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Quantity_available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_available__c</fullName>
    <description>How many of this package exist in total.</description>
    <label>Quantity available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>