blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Package__c/fields/Quantity_sold__c.field-meta.xml
<CustomField>
    <fullName>Quantity_sold__c</fullName>
    <description>How many are sold. Maintained by an automation from won deals.</description>
    <label>Quantity sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>